--- a/css/_overall.css
+++ b/css/_overall.css
@@ -15,3 +15,27 @@
     padding: 0;
 }
 
+
+.section-title{
+   
+font-size: 64px;
+line-height: 80px;
+color: #1C2E3D;
+font-weight: 700;
+}
+
+.section-title--center{
+    text-align: center;
+    max-width: none;
+}
+
+.btn{
+    font-weight: 800;
+    font-size: 12px;
+    letter-spacing: 2.18182px;
+    text-transform:uppercase ;
+    border-radius: 8px;
+    color: #fff;
+    padding: 33px 80px;
+
+}
