--- a/css/components/_first.css
+++ b/css/components/_first.css
@@ -113,6 +113,10 @@
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     font-size: 0;
+    
+}
+.slide-top {
+    width: unset !important;
 }
 
 .main-slider-text {
@@ -124,6 +128,7 @@
     text-transform: uppercase;
     color: #fff;
     font-size: 12px;
+    
 
     letter-spacing: 2.18182px;
     font-weight: 800;
