--- a/css/components/_slider.css
+++ b/css/components/_slider.css
@@ -6,10 +6,30 @@
 }
 
 .swiper-slide{
+    position: relative;
     background: #e3e3e3;
     border-radius: 8px;
     min-height: 550px;
     width: 890px;
+    transition: transform 0.3s;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    overflow: hidden;
+}
+
+.swiper-slide::after{
+    content: " ";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 60%;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.0001) 50%, rgba(0, 0, 0, 0.461617) 100%);
+
 }
 
 .featured-videos{
@@ -18,6 +38,12 @@
 }
 .swiper-slide-active{
     transform: scaleX(1.16) scaleY(1.5);
+    transition: transform 0.3s;
+}
+
+.swiper-slide-active .slider-title{
+    transition: transform 0.3s;
+    transform: translateY(0);
 }
 
 .featured-videos-descr{
@@ -30,4 +56,49 @@
     line-height: 24px;
      margin-top: 24px;
     color: #788692;
+}
+
+.slide-1{
+    background-image: url(/img/slidel.jpg);
+
+    
+}
+
+.slide-2{
+    background-image: url(/img/slidec.jpg);
+        
+    
+}
+
+.slide-3{
+    background-image: url(/img/sliderr.jpg);
+        
+    
+}
+
+.slider-title{
+    font-weight: 700;
+    font-size: 20px;
+    color: #FFFFFF;
+    position: relative;
+    z-index: 5;
+    padding-left: 35px;
+    padding-bottom: 30px;
+    transition: transform 0.3s;
+    transform: translateY(200px);
+    
+}
+
+.slide-play{
+    position: absolute;
+    left: 48px;
+    top: 40px;
+    width: 100px;
+    height: 100px;
+    background-image: url(/img/slidepl.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    
 }
