--- a/css/components/_first.css
+++ b/css/components/_first.css
@@ -52,10 +52,15 @@
     background-color: #E8594E;
     border-radius: 8px;
     text-transform: uppercase;
-    letter-spacing: 2.18182px;
     color: #fff;
     position: relative;
     z-index: 5;
+    transition: background-color 0.3s;
+}
+
+.first-btn:hover{
+  background-color: #e31d0e;
+  transition: background-color 0.3s;
 }
 
 
@@ -132,6 +137,49 @@
 
     letter-spacing: 2.18182px;
     font-weight: 800;
+}
+
+.first-slider-btn{
+    position: absolute;
+    left: 50px;
+    bottom: 55px;
+    width: 16px;
+    height: 16px;
+    background-color: fff ;
+    z-index: 50;
+    background-size: cover;
+    background-position:  center;
+    background-repeat: no-repeat;
+}
+
+.btn-right{
+    left: auto;
+    right: 50px;
+    background-image: url(../../img/right.svg);
+}
+.btn-left{
+    right: auto;
+    left: 50px;
+    background-image: url(../../img/left.svg);
+}
+
+.main-slider-media > video,
+.main-slider-media > img {
+    height: 280px;
+}
+
+.main-slider-play{
+    position: absolute;
+    left: 50%;
+    top: calc(50% - 60px);
+    transform: translate(-50%, -50%);
+    width: 32px;
+    height: 41px;
+    background-image: url(../../img/play1.svg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
 }
 
 @media (max-height: 1079px) {
