--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -30,6 +30,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    transition: opacity 0.3s;
+}
+
+.social-link:hover{
+    opacity: 0.8;
+    transition: opacity 0.3s;
+
 }
 
 .social-link--fb{
@@ -59,6 +66,13 @@ text-transform: uppercase;
     width: 48px;
     height: 10px;
     position: relative; 
+   
+}
+
+.burger:hover .burger-line{
+  
+    transition: background-color 0.3s;
+    background-color :#E8594E;
 }
 
 .burger-line{
@@ -69,9 +83,85 @@ text-transform: uppercase;
      position: absolute;
      right: 0;
      top: 0;
+     transition: background-color 0.3s;
 }
 
 .burger-line:last-child{
     top: auto;
     bottom: 0;
+}
+
+.menu{
+    position: fixed;
+    left: -150vw;
+    width: 100%;
+    top: 0;
+    height: 100%;
+    z-index: 1000;
+    background-color: rgb(17, 132, 167);
+    transition: left 0.3s;
+}
+
+.menu-visible{
+    left: 0;
+    transition: left 0.3s;
+}
+
+.menu-nav{
+width: 100%;
+height: 100%;   
+}
+
+.menu-list{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 40px;
+    padding: 30px 0;
+    overflow-y: auto;
+
+
+}
+
+.menu-link{
+    margin-bottom: 20px;
+    display: inline-block;
+    transition: color 0.3s;
+}
+
+.menu-link:hover{
+    transition: color 0.3s;
+    color: #E8594E;
+}
+
+.menu-close{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 9%;
+    top: 7%;
+
+}
+
+.menu-close-line{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 3px;
+    background-color: #fff ;
+}
+
+.menu-close-line:first-child{
+
+    transform: rotate(45deg);
+}
+
+.menu-close-line:last-child{
+
+    transform: rotate(-45deg);
 }
