--- a/css/components/_newsletter.css
+++ b/css/components/_newsletter.css
@@ -80,5 +80,11 @@
     padding: 41px 80px;
     border-top-left-radius: 0 ;
     border-top-right-radius: 0 ;
+    transition: background-color 0.3s;
+}
+
+.subscribe-form-btn:hover{
+    transition: background-color 0.3s;
+    background-color: #4196a6;
 }
 
