--- a/css/components/_slider.css
+++ b/css/components/_slider.css
@@ -1,13 +1,13 @@
 .slider-container {
-    overflow-x: hidden;
+    overflow: hidden;
     padding: 100px 0;
     width: 100%;
     margin-top: 50px;
 }
 
-.swiper-slide{
+.slider-container .swiper-slide{
     position: relative;
-    background: #e3e3e3;
+    /* background: #e3e3e3; */
     border-radius: 8px;
     min-height: 550px;
     width: 890px;
@@ -21,7 +21,7 @@
     overflow: hidden;
 }
 
-.swiper-slide::after{
+.slider-container .swiper-slide::after{
     content: " ";
     position: absolute;
     left: 0;
@@ -36,12 +36,12 @@
     padding-top: 150px;
     padding-bottom: 50px;
 }
-.swiper-slide-active{
+.slider-container .swiper-slide-active{
     transform: scaleX(1.16) scaleY(1.5);
     transition: transform 0.3s;
 }
 
-.swiper-slide-active > .btn-reset.slide-play {
+.slider-container .swiper-slide-active > .btn-reset.slide-play {
     transform: scaleX(0.9) scaleY(0.70);
 }
 
