--- a/css/components/_first.css
+++ b/css/components/_first.css
@@ -1,7 +1,7 @@
 .first {
     height: 100vh;
     min-height: 660px;
-    background-image: url(/img/fbg.jpg);
+    background-image: url(../../img/fbg.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -102,7 +102,7 @@
 .search-form-button {
     width: 18px;
     height: 18px;
-    background-image: url(/img/lupa.svg);
+    background-image: url(../../img/lupa.svg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -120,32 +120,40 @@
     font-size: 0;
     
 }
-.slide-top {
+/* .slide-top {
     width: unset !important;
-}
+} */
+
+/* .main-slider-text-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: #73AFBA;
+} */
 
 .main-slider-text {
     height: 120px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #73AFBA;
     text-transform: uppercase;
     color: #fff;
     font-size: 12px;
-    
-
+    line-height: 1;
+    text-align: center;
     letter-spacing: 2.18182px;
     font-weight: 800;
+    background-color: #73AFBA;
 }
 
 .first-slider-btn{
     position: absolute;
     left: 50px;
-    bottom: 55px;
+    bottom: 33px;
     width: 16px;
     height: 16px;
-    background-color: fff ;
+
     z-index: 50;
     background-size: cover;
     background-position:  center;
