--- a/css/components/_featured.css
+++ b/css/components/_featured.css
@@ -1,5 +1,5 @@
 .featured{
-    background-image: url(/img/fon2.jpg);
+    background-image: url(../../img/fon2.jpg);
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
