--- a/css/components/_insp.css
+++ b/css/components/_insp.css
@@ -55,6 +55,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover ;
+    overflow: hidden;
 }
 
 .insp-item::after{
