--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "normalize.css";
-@import "fonts.css";
+@import "../fonts/fonts.css";
 @import "variables.css";
 @import "vendor.css";
 @import "global.css";
